# datadog-practice

./: README.md  docker-compose.yaml
backend/: Cargo.toml  Dockerfile
backend/src/: dd.rs  lib.rs  main.rs
db/: app.py  requirements.txt
frontend/: Dockerfile  app.py  requirements.txt
