[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
async-trait = "0.1.71"
bytes = "1.4.0"
chrono = "0.4.26"
futures = "0.3.28"
http = "0.2.9"
hyper = { version = "0.14.27", features = ["full"] }
jsonrpsee = { version = "0.18.2", features = ["server", "macros"] }
opentelemetry = { version = "0.19.0", features = ["rt-tokio"] }
opentelemetry-datadog = { version = "0.7.0", features = ["reqwest-client"] }
opentelemetry-http = "0.8.0"
reqwest = "0.11.18"
serde_json = "1.0.103"
tokio = { version = "1.29.1", features = ["sync"] }
tower = "0.4.13"
tower-http = { version = "0.4.3", features = ["trace"] }
tracing = "0.1.37"
tracing-opentelemetry = "0.19.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
